--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,28 @@
 [versions]
+#noinspection GradleDependency
 activityComposeVersion = "1.6.0"
 agp = "8.11.1"
 coilCompose = "2.1.0"
 foundation = "1.8.3"
 foundationSwiperefresh = "1.0.0"
+#noinspection NewerVersionAvailable
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
+#noinspection GradleDependency
 junitVersion = "1.2.1"
+#noinspection GradleDependency
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
+#noinspection GradleDependency
 composeBom = "2024.09.00"
 material3 = "1.3.2"
 ui = "1.8.3"
 composeMaterial = "1.4.1"
 
 [libraries]
+#noinspection SimilarGradleDependency
 androidx-activity-compose-v160 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
@@ -26,6 +32,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+#noinspection SimilarGradleDependency
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
